# rap-template-backstage-trial-jo

./: README.md  pyproject.toml  template.yaml
.devcontrainer/: devcontrainer.json
project_template/: ${{ 'Pipfile' if values.package_manager == 'pipenv' }}.njk  ${{ 'Pipfile.lock' if values.package_manager == 'pipenv' }}.njk  ${{ 'pyproject.toml' if values.package_manager == 'pipenv' }}.njk  ${{ 'pyproject.toml' if values.package_manager == 'poetry' }}.njk  Makefile.jinja  Makefile.njk  README.md.jinja  README.md.njk  catalog-info.yaml.njk  run_etl.py.jinja  run_etl.py.njk  {% if not_poetry_copier %}pyproject.toml{% endif %}.jinja  {% if pipenv_copier %}Pipfile.lock{% endif %}.jinja  {% if pipenv_copier %}Pipfile{% endif %}.jinja  {% if poetry_copier %}poetry.lock{% endif %}.jinja  {% if poetry_copier %}pyproject.toml{% endif %}.jinja
project_template/${{values.module_name}}/: __init__.py  load.py  transform.py
project_template/.github/: CODEOWNERS.njk
project_template/docs/: index.md.njk
project_template/tests/e2e/: test_etl_workflow.py  test_etl_workflow.py.njk
project_template/tests/unit/: test_extract.py  test_extract.py.njk  test_load.py  test_load.py.njk  test_transform.py  test_transform.py.njk
project_template/{{module_name}}/: __init__.py  extract.py  load.py  transform.py
scripts/package_manager_helper/: pyproject.toml  update_template_packages.sh
