[tool.poetry]
name = "${{ values.repository_name }}"
version = "0.1.0"
description = "${{ values.repository_description }}"
authors = ["${{ values.repository_owner }}"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
